src/components/Dialogs/MomentDetailDialog/styles.module.css
.container {
  width: 40.5rem;
}

.header {
  @mixin flex-start-space-between;

  padding: var(--sp24) var(--sp24) var(--sp12);

  & > section {
    flex-grow: 1;
  }
}

.scrollContainer {
  @mixin hide-scrollbar;

  /* the combined height of the header and footer (151px) */
  max-height: calc(80vh - 151px);
  overflow-y: auto;
}

.contentContainer {
  margin-top: var(--sp12);
}

.mainContent {
  @mixin border-bottom-grey;

  padding: 0 var(--sp24) var(--sp24);
  border-bottom-color: var(--color-grey-hover);

  .content {
    font-size: var(--text17);
    line-height: 1.75;
  }

  .assets {
    margin-top: var(--sp12);
  }
}

.comments {
  padding: var(--sp24);

  & .title {
    margin-bottom: var(--sp24);
    font-size: var(--text15);
    line-height: 1.75;
    color: var(--color-black);

    & .count {
      color: var(--color-grey-dark);
    }
  }

  & .commentNode {
    margin: var(--sp24) 0;
  }

  &.commentsPlaceholder {
    height: 13rem;
  }
}

.footer {
  @mixin border-top-grey-light;
  @mixin flex-center-start;

  gap: var(--sp9);
  padding: var(--sp16) var(--sp24) var(--sp16) var(--sp13);

  &.editing {
    padding: var(--sp16) var(--sp24);
  }

  & .likeButton {
    @mixin flex-center-all;

    padding: 0 var(--sp11);
  }
}

